Adds proper lab file.

--- a/08.01-setInterval-setTimeout.html
+++ b/08.01-setInterval-setTimeout.html
@@ -44,6 +44,9 @@
     
     <!-- FINAL .js -->
     <script src="js/08.01-setInterval-setTimeout-FINAL.js"></script>
+    
+    <!-- LAB -->
+    <script src="js/08.01-setInterval-setTimeout-lab.js"></script>
 
 </body>
 
